--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <br><br><br><hr>
     <h1 class="todo">TODO</h1>
-    <h2 style="color:white">PASSWORD</h2>
+    <h2 style="color:white">Password</h2>
     <a href="about.html">About</a><br>
     <a href="asphalt.html">Asphalt</a><br>
     <a href="tpo.html">TPO</a><br>
